[package]
name = "btrsnap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
btrfsutil = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
walkdir = "2.5.0"
env_logger = "0.11.8"
log = "0.4.28"
